added find container for finding books to read

--- a/TODO
+++ b/TODO
@@ -1,1 +1,13 @@
-TODO
+POMEGRA NEXT TODO:
+
+- Requests, messages etc.
+- See other books in town
+- 
+- Search
+- Revise naming convention
+- Fix authors etc
+- Fix categories etc
+
+NEw FEATURES
+- Maps for neighbors etc.
+- Add Wishlist feature
